Call to actions and project section updated.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about">About Me</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#Portfolio">Portfolio</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
 
@@ -48,8 +48,8 @@
                 I am an efficient communicator with a sharp acumen, <br />strong interpersonal and leadership skills
                 ready for the next challenge.</p>
             <div class="buttons">
-                <a href="#" class="btn">Say Hello</a>
-                <a href="#Portfolio" class="btn2"><span><i class="bx bx-play"></i></span>Watch My Work</a>
+                <a href="#contact" class="btn">Say Hello</a>
+                <a href="https://www.youtube.com/channel/UCNvaBLuJ7eMZBjRe6XNx4NA" target="_blank" class="btn2"><span><i class="bx bx-play"></i></span>Watch My Work</a>
             </div>
         </div>
     </section>
@@ -123,13 +123,13 @@
     </section>
 
     <!-- Portfolio section design-->
-    <section class="Portfolio" id="Portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="main-text">
             <p>Portfolio</p>
             <h2><span>Latest</span> Projects</h2>
         </div>
 
-        <div class="Portfolio-content">
+        <div class="portfolio-content">
             <div class="row">
                 <img src="pt1.jpg">
                 <div class="layer">
@@ -202,24 +202,23 @@
         </div>
     </section>
 
-  <!-- Portfolio section design-->
+  <!-- Contact section design-->
   <section class="contact" id="contact">
     <div class="contant-text">
         <h2>Contact <span>Me!</span></h2>
-        <h2>If you have Any Project in mind </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adiero saepe ipsam hic unde! Sittur adiero saepe ipsam hic unde! Sit.tur adiero saepe ipsam hic unde! Sit..</p>
+        <h3>Freelancing UI / UX Designing and Prototyping</h3>
+        <p>.</p>
     <div class="list">
         <li><a href="#">07868636684</a></li>
-        <li><a href="#">lotsubills@gmail.com</a></li>
-        <li><a href="#">Like share &Subscribe</a></li>
+        <li><a href="#">newlandlots@gmail.com</a></li>
+        <li><a href="#">Like share & Subscribe</a></li>
     </div>
 
 
     <div class="contact-icons">
-        <a href="#"><i class="bx bxl-twitter"></i></a>
-        <a href="#"><i class="bx bxl-instagram"></i></a>
-        <a href="#"><i class="bx bxl-github"></i></a>
-        <a href="#https://www.linkedin.com/in/newland-lotsu-8bb30297/"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/LotsuNewland" target="_blank"><i class="bx bxl-twitter"></i></a>
+        <a href="https://github.com/lotsun" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/newland-lotsu-8bb30297/" target="_blank"><i class="bx bxl-linkedin"></i></a>
     </div>
     </div>
 
@@ -233,11 +232,11 @@
 </form>
     </div>
   </section>
+   <!-- contact section design Ends-->
 
-   <!-- End section design-->
    <section class="end">
 <div class="last-text">
-    <p>Copyright 2023 by Newland All Rights Reserved</p>
+    <p>Copyright ©2023 by Newland All Rights Reserved</p>
 </div>
 
 <div class="top">
