--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
                 </div>
             </div>
 
-            <div class="row">
+            <!--
+                <div class="row">
                 <img src="pt5.jpg">
                 <div class="layer">
                     <h5>Faith Baking</h5>
@@ -186,8 +187,9 @@
                     <a href="#"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
-
-            <div class="row">
+            -->
+    <!--
+        <div class="row">
                 <img src="pt6.jpg">
                 <div class="layer">
                     <h5>Shop Attendance software</h5>
@@ -199,19 +201,22 @@
                 </div>
             </div>
 
+    -->
+            
         </div>
     </section>
+
 
   <!-- Contact section design-->
   <section class="contact" id="contact">
     <div class="contant-text">
         <h2>Contact <span>Me!</span></h2>
-        <h3>Freelancing UI / UX Designing and Prototyping</h3>
-        <p>.</p>
+        <h3>Freelancing <br> UI / UX Designing</h3> 
+        <p></p>
     <div class="list">
+        <li><a href="#">Newlandlots@gmail.com</a></li>
         <li><a href="#">07868636684</a></li>
-        <li><a href="#">newlandlots@gmail.com</a></li>
-        <li><a href="#">Like share & Subscribe</a></li>
+        <li><a href="#"> Follow Me  & Subscribe</a></li>
     </div>
 
 
