--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <span class="two">I am</span>
             </div>
             <h1>Newland</h1>
-            <h3>Software <span> Developer.</span></h3>
+            <h3>Software <span> Developer</span></h3>
             <p>I am competent in Frontend Development employing HTML5, CSS3 <br />
-                JavaScript,Bootstrap and React for small to large-scale projects. <br />
+                JavaScript,Bootstrap and React for small to large-scale projects <br>with the help of Jira Management platform.<br />
                 I am an efficient communicator with a sharp acumen, <br />strong interpersonal and leadership skills
                 ready for the next challenge.</p>
             <div class="buttons">
