Update not completed. yet to upload more projects

--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
 
         <div class="portfolio-content">
             <div class="row">
-                <img src="pt1.jpg">
+                <img src="pt1.jpeg">
                 <div class="layer">
                     <a href="#"><i class="bx bx-link-external"></i></a>
-                    <h5>Virtual Design</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur rerum voluptatum ea.
-                        <br> Neque amet officia reiciendis dolores distinctio sapiente.
+                    <h5>To do list</h5>
+                    <p>This was created with HTML CSS AND JAVASCRIPT .
+                        <br> It gives the end user to add add and remove tasks when accomplished. 
                     </p>
                 </div>
             </div>
@@ -168,11 +168,12 @@
             <div class="row">
                 <img src="pt4.jpg">
                 <div class="layer">
-                    <h5>Eat out</h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea.
-                        <br> Neque amet officia reiciendis dolores <br> labore distinctio sapiente.
+                    <h5>Milk and Honey</h5>
+                    <p>This is New York Time Best Selling Books Website. it talks about the 
+                        two powerful ingredients that offer several promising health benefits.
+                        <br><br>
                     </p>
-                    <a href="#"><i class="bx bx-link-external"></i></a>
+                    <a href="https://cosmic-mermaid-2b169a.netlify.app/"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
 
@@ -211,7 +212,7 @@
   <section class="contact" id="contact">
     <div class="contant-text">
         <h2>Contact <span>Me!</span></h2>
-        <h3>Freelancing <br> UI / UX Designing</h3> 
+        <h3><br> UI / UX Designing</h3> 
         <p></p>
     <div class="list">
         <li><a href="#">Newlandlots@gmail.com</a></li>
@@ -241,7 +242,7 @@
 
    <section class="end">
 <div class="last-text">
-    <p>Copyright ©2023 by Newland All Rights Reserved</p>
+    <p>Copyright ©2023 All Rights Reserved</p>
 </div>
 
 <div class="top">
