ui/ux section write up

--- a/index.html
+++ b/index.html
@@ -95,12 +95,10 @@
                 <div class="s-icon">
                     <i class="bx bxs-edit-alt"></i>
                 </div>
-                <h3> UI / UX Creative Designer</h3>
-                <p>UI/UX design is a critical component in the creation of digital products, 
-                and Figma for prototyping are two of the most popular tools used by me.
-                Together, these tools allow UI/UX designers to create high-fidelity, interactive designs that can be shareable, 
-                testable and refined before launch. Figma allows UI/UX helps me to bring ideas to life in a collaborative environment, 
-                enabling them to design for both web and mobile platforms.
+                <h3> UI / UX Designer</h3>
+                <p>As a UI/UX designer i possess the ability to create and solve problems through user-centered designs, 
+                    by understanding the needs, motivations and behaviours of users. My Management and communication skills
+                    helps me to  collaborate with product managers, developers, content strategists, and other stakeholders.
              </p>
                 <a href="#" class="read"> Read More </a>
             </div>
