Netflix landing page added

--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
             </div>
 
             <div class="row">
-                <img src="pt3.jpg">
+                <img src="netflix.jpeg">
                 <div class="layer">
-                    <a href="#"><i class="bx bx-link-external"></i></a>
-                    <h5>Rabbit Nut </h5>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse animi rerum voluptatum ea.
-                        <br> Neque amet officia reiciendis dolores nobis
-                    </p>
+                    <a href="https://fantastic-druid-a6f789.netlify.app/"><i class="bx bx-link-external"></i></a>
+                    <h5>Netflix Landing Page  </h5>
+                    <p>online streaming platform created using HTML, CSS and JavaScript. 
+                    </p>It allows users to watch a wide selection of movies and TV shows on any device connected to the internet.
+                    <br> 
                     
                 </div>
             </div>
